apps/web_vps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
spec:
metadata:
  name: web-vps-ingress
  namespace: web-vps
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api-vps.nefyo.com
        - vps.nefyo.com
      secretName: web-vps-cert-secret
  rules:
    - host: api-vps.nefyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
    - host: vps.nefyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5001
